@@ -18,15 +18,6 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -273,6 +264,30 @@ operator|.
 name|search
 operator|.
 name|TermQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|automaton
+operator|.
+name|TooComplexToDeterminizeException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
 import|;
 end_import
 begin_comment
@@ -3567,6 +3582,62 @@ literal|"\"ä¸­å½\"~3^2"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/** LUCENE-6677: make sure wildcard query respects maxDeterminizedStates. */
+DECL|method|testWildcardMaxDeterminizedStates
+specifier|public
+name|void
+name|testWildcardMaxDeterminizedStates
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|QueryParser
+name|qp
+init|=
+operator|new
+name|QueryParser
+argument_list|(
+literal|"field"
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|qp
+operator|.
+name|setMaxDeterminizedStates
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|qp
+operator|.
+name|parse
+argument_list|(
+literal|"a*aaaaaaa"
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should have hit exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|TooComplexToDeterminizeException
+name|tctde
+parameter_list|)
+block|{
+comment|// expected
+block|}
 block|}
 block|}
 end_class
